# Wallpaper-Engine

./: .gitattributes  .gitignore  .gitmodules  .tokeignore.txt  CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  Wallpaper Engine.sln
Wallpaper Engine/: Wallpaper Engine.vcxproj  Wallpaper Engine.vcxproj.filters  default.frag  default.vert  glad.c
Wallpaper Engine/src/core/: Application.cpp  Application.hpp  WindowManager.cpp
Wallpaper Engine/src/shader/: ShaderManager.cpp  ShaderManager.hpp
Wallpaper Engine/src/util/: Constants.hpp  Log.cpp  Log.hpp
Wallpaper Engine/src/vertex/: IndexBuffer.cpp  IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBufferLayout.hpp
examples/: galaxy.frag  stars.frag  universe.frag
include/glad/: gl.h  glad.h
lib/imgui/: imgui_impl_glfw.cpp
res/: default.frag  default.vert  default.wallpaper
src/: main.cpp
src/core/: Application.cpp  Application.hpp  WindowManager.cpp  WindowManager.hpp
src/opengl/: ShaderManager.cpp  ShaderManager.hpp  Texture.cpp  Texture.hpp  Uniform.hpp  WallpaperManager.cpp  WallpaperManager.hpp  Window.cpp  Window.hpp
src/shader/: ShaderManager.cpp  ShaderManager.hpp
src/util/: Constants.hpp  Log.cpp  Log.hpp  OS.cpp  OS.hpp
src/vertex/: IndexBuffer.cpp  IndexBuffer.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferLayout.cpp  VertexBufferLayout.hpp
tools/: configure.bat
